[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+        <style>
+        div {color:green;
+                }
+                </style>
     </head>
     <body>
         <div class="center">
@@ -11,6 +15,7 @@
         <div class="center text-big bold">
             Hi! I am your webapp.
         </div>
+        <div>This app is being created by sid</div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
